apps/ouroboros/ouroboros-agent.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ouroboros-agent
  namespace: galaxy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ouroboros-agent
  template:
    metadata:
      labels:
        name: ouroboros-agent
    spec:
      serviceAccountName: ouroboros-deployer
      containers:
        - name: agent
          image: woodpeckerci/woodpecker-agent:v3.13.0
